# korean

./: Makefile
CLAPACK-3.2.1/F2CLIBS/libf2c/: Makefile
CLAPACK-3.2.1/TESTING/: ctest.out  ctest_rfp.out  dstest.out  dtest.out  dtest_rfp.out  stest.out  stest_rfp.out  zctest.out  ztest_rfp.out
examples/1-1D-mono/: log.lammps  phana
spglib-0.7.1/: Makefile  Makefile.in  config.h  config.h.in  config.status  configure  configure.ac  libtool
spglib-0.7.1/python/: Makefile.in
spglib-0.7.1/python/ase/: _spglib.c  example_ase.py  setup.py
spglib-0.7.1/python/ase/doc/: conf.py  index.rst
spglib-0.7.1/src/: ChangeLog  Makefile  Makefile.am  Makefile.in  bravais.lo  bravais_art.lo  cell.lo  libsymspg.la  mathfunc.lo  pointgroup.lo  primitive.c  primitive.lo  spacegroup.lo  spacegroup_data.lo  spacegroup_database.lo  spglib.lo  symmetry.lo  symmetry_kpoint.lo
spglib-0.7.1/src/.deps/: bravais.Plo  bravais_art.Plo  cell.Plo  mathfunc.Plo  pointgroup.Plo  primitive.Plo  spacegroup.Plo  spacegroup_data.Plo  spacegroup_database.Plo  spglib.Plo  symmetry.Plo  symmetry_kpoint.Plo
spglib-0.7.1/src/.libs/: libsymspg.lai
spglib-0.7.1/test/: README  extconf.rb  getspg.c  symPoscar.rb
spglib-0.7.1/test/data/: test-all.zsh  test-cubic.zsh
tricubic-1.0/: Makefile  config.h  config.status  libtool
tricubic-1.0/doc/: Makefile
tricubic-1.0/man/: Makefile
tricubic-1.0/src/: Makefile  example1  example2  example3
tricubic-1.0/src/.deps/: example1.Po  example2.Po  example3.Po
tricubic-1.0/src/libtricubic/: Makefile  libtricubic.la  libtricubic.lo  tricubic_utils.lo
(+7 files in other folders)
