lib_LTLIBRARIES = libsymspg.la 
libsymspg_la_SOURCES = \
bravais_art.c \
bravais.c \
cell.c \
debug.c \
mathfunc.c \
pointgroup.c \
primitive.c \
spacegroup.c \
spacegroup_database.c \
spacegroup_data.c \
spglib.c \
symmetry.c \
symmetry_kpoint.c \
bravais_art.h \
bravais.h \
cell.h \
debug.h \
mathfunc.h \
pointgroup.h \
primitive.h \
spacegroup_database.h \
spacegroup_data.h \
spacegroup.h \
spglib.h \
symmetry.h \
symmetry_kpoint.h
